syntax = "proto3";

package io.bigfast;

message Empty {}

message Subscription {
    string channelId = 1;
    string userId = 2;
}

message UntypedMessage {
    string id = 1;
    string channelId = 2;
    string userId = 3;
    bytes content = 4;
}

// The messaging service definition.
service Messaging {
    rpc UntypedChannelSubscribe (Subscription) returns (stream UntypedMessage) {
    }
    rpc UntypedGlobalPublish (stream UntypedMessage) returns (Empty) {
    }

    rpc ShutdownSubscriber (Subscription) returns (Empty) {
    }
}
